--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
     buildToolsVersion "30.0.0"
 
     defaultConfig {
-        applicationId "com.example.onlinehouserentalmanagement"
-        minSdkVersion 16
+        applicationId "com.example.cse327_project"
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -24,35 +24,37 @@ android {
 }
 
 dependencies {
-
-    implementation 'com.google.firebase:firebase-auth:19.4.0'
-    implementation 'com.google.firebase:firebase-storage:19.2.0'
-    implementation 'com.google.firebase:firebase-database:19.4.0'
-
-
-
-
-
-    implementation "androidx.recyclerview:recyclerview:1.1.0"
-    implementation "androidx.cardview:cardview:1.0.0"
-    implementation "com.firebaseui:firebase-ui-database:6.2.1"
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
-
-    implementation 'com.orhanobut:dialogplus:1.11@aar'
-
-
-
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation 'com.google.firebase:firebase-auth:16.0.5'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.material:material:1.3.0-alpha02'
+
+    //implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    //implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    implementation 'com.google.firebase:firebase-auth:19.3.1'
+    implementation 'com.google.firebase:firebase-database:19.4.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'com.github.clans:fab:1.6.4'
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
 
 
+    implementation 'com.google.firebase:firebase-storage:19.2.0'
+    implementation 'com.google.firebase:firebase-firestore:21.6.0'
+    implementation 'com.firebase:firebase-client-android:2.5.2'
 
-    implementation 'com.karumi:dexter:6.0.2'
+
+    ///////////////////
+
+
+    implementation 'com.google.firebase:firebase-analytics:17.5.0'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.1'
+    implementation 'com.firebaseui:firebase-ui-database:3.2.2'
+    implementation 'com.google.firebase:firebase-messaging:20.2.4'
+
 
 }
