--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".homePageOnlineRental"></activity>
+        <activity android:name=".homePageOnlineRental" />
         <activity android:name=".userRegisterOrLogin" />
         <activity android:name=".houseInformationDetailsRegistration" />
         <activity android:name=".demoPage" />
