--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+
 
     implementation 'com.karumi:dexter:6.0.2'
 
